# Edgebreaker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.txt  b.txt  diff.py  obj2ov copy.py  obj2ov.py  obj2ov2.py  out.bco  out.ov  out.ovx  out.txt  ov2obj.py  rabbit.ov
cpp/: obj2ov.cpp  off2ov.cpp  ov2obj.cpp
data/: rabbit.ov  sample.ov
include/: arg_parser.h  compressor.h  converter.h  decompressor.h  loader.h  reader.h  types.h  writer.h
res/: clers.txt  handles.txt  vertices.txt
src/: arg_parser.cpp  compress.cpp  compressor.cpp  converter.cpp  decompress.cpp  decompressor.cpp  loader.cpp  main.cpp  reader.cpp  test  writer.cpp
